# AAU_P4_MONITOR_DRONE

./: .gitignore  MATLAB.gitignore  Main.py  README.md  Simulationdrone_path_xtest.mat  drone_path_x.mat  drone_path_y.mat  drone_path_z.mat
GUI/: path_gen.py  (+4 more)
Real/ros2_ws/src/p4_drone_project/: CMakeLists.txt  package.xml
Real/ros2_ws/src/p4_drone_project/include/Linux64/: DataStreamClient.h
Real/ros2_ws/src/p4_drone_project/include/p4_drone_project/: cpp_header.hpp
Real/ros2_ws/src/p4_drone_project/p4_drone_project/: motion_controller_module.py  regulator_module.py
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/: py_pathplanner.py
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-17-16:7 - test 2/: PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-17-17:49 - test 6/: PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-17-17:54 - test 7/: PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-17:25 - test 8/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-17:4/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-17:44/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-17:59 - test 9/: PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-18:32/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-18:35/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-19:14/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/DATA/2024-5-21-19:3/: PathData.csv  PolyData.csv
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/GUI/: path_gen_vp.py
Real/ros2_ws/src/p4_drone_project/p4_drone_project/PathPlanner/LOGIK/: Path_generator_v2_vp_4.py
Real/ros2_ws/src/p4_drone_project/src/: cpp_vicon.cpp
ros2_ws/src/my_cpp_py_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_py_pkg/include/my_cpp_py_pkg/: cpp_header.hpp
ros2_ws/src/my_cpp_py_pkg/my_cpp_py_pkg/: motion_controller_module.py  regulator_module.py  vicon_test_module.py
ros2_ws/src/my_cpp_py_pkg/my_cpp_py_pkg/PathPlanner/: py_pathplanner.py
ros2_ws/src/my_cpp_py_pkg/my_cpp_py_pkg/PathPlanner/GUI/: path_gen_no_vp.py  path_gen_vp.py
ros2_ws/src/my_cpp_py_pkg/my_cpp_py_pkg/PathPlanner/LOGIK/: Path_generator_v2_vp_1.py  Path_generator_v2_vp_2.py  Path_generator_v2_vp_3.py  Path_generator_v2_vp_4.py
ros2_ws/src/my_cpp_py_pkg/scripts/: motion_controller_node.py  path_planner_node.py  pathplanner_talker.py  py_listener.py  regulator_node.py
ros2_ws/src/my_cpp_py_pkg/src/: cpp_node.cpp  cpp_talker.cpp  cpp_vicon.cpp
(+343 files in other folders)
